<resources>
    <string name="app_name">ParkingManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="log_in">Login</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ble_click_start_scan">Click the icon to scan\nfor NRF ble devices</string>
    <string name="no_enters_logged">No enters logged!</string>
    <string name="not_signed_in">Not signed in!</string>
    <string name="sign_in">Sign in</string>
    <string name="signing_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="sign_out_message">By signing out all local data (added cars) will be lost.\nAre you sure you want to exit?</string>
    <string name="sign_in_message">Signing in is required in order to use the features of the application, such as entering a parking or reporting incorrectly parked vehicle.</string>
    <string name="enter_on">Enter on: %s</string>
    <string name="empty_list_message">No stays registered</string>
    <string name="loading">Loading…</string>
    <string name="parked">On parking</string>
    <string name="not_parked">Not parked</string>
    <string name="cars">Cars</string>
    <string name="history">History</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="ok">Ok</string>
    <string name="no_cars_added">No cars added</string>
    <string name="add_car">Add car</string>
    <string name="plate">Plate</string>
    <string name="done">Done</string>
    <string name="delete_car">Remove car</string>
    <string name="delete">Delete</string>
    <string name="enter_parking_title">Enter parking?</string>
    <string name="exit_parking_title">Exit parking?</string>
    <string name="enter">Enter</string>
    <string name="exit_btn_text">Exit</string>
    <string name="enable_location_message">GPS LOCATION IS REQUIRED \nCLICK THE ICON TO ENABLE IT</string>
    <string name="connected_to_ble_device">"CONNECTED TO BLE DEVICE:\n %s"</string>
    <string name="searching_for_ble_devices">"SEARCHING FOR DEVICE\n PLEASE WAIT.."</string>
    <string name="discovering_services_of_ble_device">DISCOVERING SERVICES OF\n DEVICE: %s…</string>
    <string name="enable_bluetooth_message">BLUETOOTH NOT ENABLED!\nENABLE IT TO CONTINUE</string>
    <string name="wrong_parked_car">Wrong parked car</string>
    <string name="report">Report</string>
    <string name="parking_spent_time">Time spent:\n%s</string>
    <string name="days">%d days</string>
    <string name="minutes">%d minutes</string>
    <string name="hours">%d hours</string>
    <string name="seconds">%d seconds</string>
    <string name="no_ble_devices_found">No ble devices found</string>
    <string name="scan_again">Try scanning again?</string>
    <string name="cancel">Cancel</string>
    <string name="scan_started_error">Scan already started/Reconnecting...</string>
    <string name="date_time_formatted">%d %s %d at %s</string>
    <string name="input_not_valid">Input not valid!</string>
</resources>
