<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:gravity="bottom"
    android:background="@android:color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/carEditTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_ble"
            android:text="@string/add_car"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.3"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/plateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/gray"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textCapCharacters"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="8dp"
            android:hint="@string/plate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCarBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:elevation="8dp"
            android:padding="16dp"
            android:focusable="true"
            android:text="@string/done"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
